# cookiecutter-pypackage

./: README.md  cookiecutter.json  pyproject.toml
docs/: console_script_setup.rst  prompts.rst  tutorial.rst
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_directory}}/: README.md  app.json  pyproject.toml
{{cookiecutter.project_directory}}/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/: Procfile  pyproject.toml
